responded to edditor and stock question

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -334,7 +334,7 @@ Even management plans that take into consideration such strategies might not be 
 ## Potential drivers of shift and managing an uncertain future
 
 The early projected range shifts of large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability. For example, sea surface temperature (SST) is projected to increase beyond historical variability by 2030 in 50 to 70% of the global ocean [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and primary production (NPP) are the main indicators of species distributional changes across ocean basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically, in the species distribution model used here (see methods), SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems, while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics, where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shifts at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
-Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species.Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species.Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (NOTE: See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).** Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
 <!-- # Conclusion {-} -->
 
