--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -2625,6 +2625,526 @@ for(i in 1:2){
 
 ```
 
+##### Fig. N3 Mapping the time of emergence Of Top stocks
+
+```{r emergence_map, eval = F}
+
+
+top_stocks_per_country <- Eme_Res %>% 
+  rename(geo_region = un_sub_region) %>% 
+  group_by(sau_fishing_entity,fishing_entity_id,geo_region,tresh,taxon_key) %>% 
+  summarise(n()) %>% 
+  left_join(Sau_data,
+            by = c("fishing_entity_id","taxon_key")) %>% 
+  filter(!is.na(variable)) %>% 
+  # group_by(sau_fishing_entity,fishing_entity_id,tresh,variable) %>% 
+  # summarise(sum_value = sum(value,na.rm=T)) %>% 
+  group_by(sau_fishing_entity,geo_region,tresh,variable) %>% 
+  # Select top 10 most valuable stocks
+  top_n(5,value)
+
+
+# Per EEZs
+top_toe <- Eme_Res %>% 
+  rename(geo_region = un_sub_region) %>% 
+  group_by(eezid,sau_fishing_entity,geo_region,tresh,taxon_key) %>% 
+  # summarise(n_tax = length(unique(taxon_key))) %>% 
+  summarise(mean_yr = mean(emerging_yr,na.rm=T)) %>% 
+  right_join(top_stocks_per_country,
+             by = c("sau_fishing_entity","geo_region","tresh","taxon_key")
+             ) %>% 
+  group_by(sau_fishing_entity,geo_region,tresh,variable) %>% 
+  summarise_at(vars(mean_yr),
+               c("mean"=mean,
+                 "sd" = sd)) %>% 
+  mutate(
+    geo_region = ifelse(is.na(geo_region),"Other",geo_region)
+  )
+  
+```
+
+###### The bar option by UN sub region
+
+```{r}
+
+# Create data
+Species_Data <- top_toe %>% 
+  filter(tresh == selected_tresh,
+         variable == "value") %>% 
+  mutate(mean = mean-2000,
+         group = geo_region)
+
+# Set a number of 'empty bar' to add at the end of each group
+Char <- as.factor(Species_Data$group)
+empty_bar <- 5
+to_add <- data.frame( matrix(NA, empty_bar*nlevels(Char), ncol(Species_Data)) )
+colnames(to_add) <- colnames(Species_Data)
+to_add$group <- rep(levels(Char), each=empty_bar)
+Species_Data <- rbind(Species_Data, to_add)
+Species_Data <- Species_Data %>% arrange(group,mean)
+Species_Data$id <- seq(1, nrow(Species_Data))
+
+# Species_Data$id <- seq(1, nrow(Species_Data))
+
+# Get the name and the y position of each label
+label_data <- Species_Data 
+number_of_bar <- nrow(label_data)
+angle <- 90 - 360 * (label_data$id-0.5) /number_of_bar
+label_data$hjust <- ifelse( angle < -90, 1, 0)
+label_data$angle <- ifelse(angle < -90, angle+180, angle)
+
+
+# prepare a data frame for base lines
+base_data <- Species_Data %>% 
+  group_by(group) %>% 
+  summarize(start=min(id), 
+            end=max(id) - empty_bar, 
+            median = median(mean, na.rm = T)
+  ) %>% 
+  rowwise() %>% 
+  mutate(title=mean(c(start, end)))
+
+
+
+# prepare a data frame for grid (scales)
+grid_data <- base_data
+grid_data$end <- grid_data$end[ c( nrow(grid_data), 1:nrow(grid_data)-1)] + 1
+grid_data$start <- grid_data$start - 1
+# grid_data <- grid_data[-1,]
+# grid_data[1,2] <- 5 # Manually include bathydemerssal
+# grid_data[1,3] <- 1 
+
+
+
+un_regions <- grid_data %>% 
+  select(group) 
+
+ggplot(Species_Data, 
+       aes(x=as.factor(id), 
+           y=mean,
+           fill=mean)
+) +       # Note that id is a factor. If x is numeric, there is some space between the first bar
+  geom_bar(aes(x=as.factor(id),
+               y=mean,
+               fill=mean),
+           stat="identity",
+           alpha=0.5
+  ) +
+  geom_segment(data=grid_data,
+               aes(x = end, y = 30, xend = start, yend = 30),
+               colour = "grey90", alpha=1, size=0.3, inherit.aes = FALSE) +
+  geom_bar(aes(x=as.factor(id),
+               y=mean,
+               fill=mean
+  ),
+  stat="identity",
+  alpha=0.5) +
+  annotate("text", 
+           x = 0.5,
+           y = 37,
+           label = "UN Agenda",
+           color= "grey60", 
+           size=3, 
+           angle=-5
+  ) +
+  # Country names
+  geom_text(data=label_data,
+            aes(x=id, 
+                y= 100,
+                label=sau_fishing_entity,
+                hjust=hjust),
+            color="black",
+            fontface="italic",
+            alpha = 1,
+            size = 4 ,
+            angle = label_data$angle,
+            inherit.aes = FALSE) +
+  # Continents labels
+  # geom_text(data=base_data,
+  #           aes(x = title,
+  #               y = 85, 
+  #               label=group), 
+  #           # hjust=c(1,1,1,0,0,0),
+  #           colour = "black",
+  #           # angle = myAng,
+  #           size=5,
+  #           fontface="bold",
+  #           inherit.aes = FALSE) +
+  ylim(-100,100) + # sets the circle the first value the central the last value how wide
+  theme_minimal() +
+  theme(
+    legend.position = c(0.5,0.5),
+    legend.text = element_text(size = 13),
+    legend.title = element_text(size = 14, face = "bold"),
+    legend.title.align = 0.5,
+    axis.text = element_blank(),
+    axis.title = element_blank(),
+    panel.grid = element_blank(),
+    panel.background = element_rect(colour = "white"),
+    legend.direction="horizontal",
+    legend.key.width = unit(3, 
+                            "line")
+  ) +
+  coord_polar(start = 0) +
+  scale_fill_viridis("Average year of range shift\nfor top 5 most valuable stocks",
+                     limits = c(0,100),
+                     breaks = seq(0,100,20),
+                     labels = seq(2000,2100,20),
+                     direction = -1
+  ) +
+  guides(
+    fill=guide_colorbar(title.position="top", 
+                        title.hjust =0.5)
+  )
+
+
+ggsave(
+  plot = last_plot(),
+  width = 13,
+  height = 13,
+  units = "in",
+  filename = "./Figures/top_stocks_circular_trend.png"
+)
+
+```
+
+
+###### The Map option with tops
+
+```{r the map}
+
+# Create data
+Top_map_data <- top_toe %>% 
+  filter(tresh == selected_tresh,
+         variable == "value") %>% 
+  mutate(mean = mean-2000) %>%
+  arrange(mean)
+
+
+
+# These are regions without transboundary species
+grey_land <- World_map %>% 
+  filter(!fishing_entity_id %in% Value_map_data$fishing_entity_id) %>% 
+  filter(!sovereignt %in% c("Antarctica"))
+
+# grey_eez <- World_eez_sf %>% 
+#   filter(!eezid %in% Eez_d_hist$eezid,
+#          !eez_name %in% Neighbours$eez_name)
+
+# -------------------------- #
+# Call plot for both tresholds
+# -------------------------- #
+# tresh_list <- c("tresh_one","tresh_two")
+
+
+  # Value Map
+  World_map_part <- World_map_nemer %>% 
+  filter(
+    tresh ==  ,
+    variable == "value"
+  )
+  
+  # ToE Map 
+  toe_map_data <- World_eez_sf %>% 
+    left_join(Eez_d_hist,
+              by = "eezid") %>% 
+    filter(tresh == tresh_list[i],
+           metric == "mean_yr")
+  
+  # Map with countries without ToE
+  
+  russia_churchil <- World_eez_sf %>% 
+    filter(eez_name %in% c("Russia (Kara Sea)","Russia (Laptev to Chukchi Sea)"))
+  
+  no_toe_eez <- World_eez_sf %>% 
+    filter(eez_name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
+           !eez_name %in% toe_map_data$eez_name) %>%  # Filter EEZs with ToE stocks
+    rbind(russia_churchil)
+  
+  no_toe_land <- World_map %>% 
+    filter(name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
+           !name %in% World_map_part$name) # Filter EEZs with ToE stocks
+    
+    
+  map <- ggplot(toe_map_data) +
+    geom_sf(
+      aes(
+        fill = reverse #original map
+        # fill = value
+      ),
+      color =  "white",
+      size = 0.1
+    ) +
+    # Inlcude the participation of species
+    geom_sf(data = World_map_part,
+            # aes(fill = participation+2000), #original map
+            aes(fill = participation),
+            color =  "white",
+            size = 0.1
+    ) +
+    # grey maps
+    # ggplot() +
+    geom_sf(data = grey_land, aes(), fill = "grey50", color =  "white",size = 0.1) +
+    # geom_sf(data = grey_eez, aes(), fill = "white", color =  "grey50",size = 0.1) +
+    geom_sf(data = no_toe_eez, aes(), fill = "lightblue", color =  "white",size = 0.1) +
+    geom_sf(data = no_toe_land, aes(), fill = "lightblue", color =  "white",size = 0.1) +
+    # Set Participation labels
+    annotate("text",
+             x =-150,
+             y = -69,
+             label = "Transboundary fishing revenue (%)",
+             color="black",
+             size=5,
+             angle=0,
+             fontface="bold",
+             hjust=0) +
+    annotate("text", 
+             x = c(-72,-35,5,46,82),
+             y = -69,
+             # x =(c(-8500000,-3000000,2500000,7500000,12800000)),
+             # y = -9050000,
+             label = c(0,25,50,75,100), 
+             color="black", 
+             size=4, 
+             angle=0, 
+             # fontface="bold",
+             hjust=0) +
+    # Set ToE labels
+    annotate("text", 
+             x =-150,
+             y = -85,
+             label = "Average year of range shift",
+             color="black", 
+             size=5, 
+             angle=0, 
+             fontface="bold",
+             hjust=0) +
+    annotate("text", 
+             x = c(-79,-39,2,42,81),
+             y = -85,
+             # label = seq(2100,2000,-25), # original
+             label = c(">2100",seq(2075,2000,-25)), # not inluding the > because we dont know
+             color="black", 
+             size=4, 
+             angle=0, 
+             # fontface="bold",
+             hjust=0) +
+    # Set No emergence label
+    annotate("text",
+             x =110,
+             y = -77,
+             label = "No shift",
+             color="black",
+             size=5,
+             angle=0,
+             fontface="bold",
+             hjust=0) +
+    scale_fill_viridis("",
+                       limits = c(2000,2100),
+                       breaks = seq(2000,2100,25),
+                       labels = c("","","","","")#,
+                       # direction = -1
+    ) +
+    # scale_fill_gradientn("",
+    #                      limits = c(2000,2100),
+    #                      breaks = seq(2000,2100,25),
+    #                       labels = c("","","","",""),
+    #                      colours = pal
+    # ) +
+    # geom_hline(yintercept = c(-50,0,50,80)) +
+    my_ggtheme_m(leg_pos = "bottom") +
+    theme(
+      legend.box.margin = margin(t = -62, l = 252),
+      legend.text = element_blank(),
+      legend.key.width = unit(5, "line")
+    )
+  
+  
+  
+  ## --------------- ##
+  # Regional Boxplot
+  ## --------------- ##
+  
+  # Weighted verion
+  # boxplot_data <- Eme_Res %>% 
+  #   # Get the order of boxes
+  #   filter(tresh == tresh_list[i],
+  #          !is.na(un_sub_region)) %>%
+  #   group_by(un_sub_region) %>%
+  #   summarise(n_eezs = length(unique(sf_eez_name))) %>%
+  #   # Get the rest of the data
+  #   left_join(Eme_Res) %>%
+  #   filter(tresh == tresh_list[i],
+  #          !is.na(un_sub_region)) %>%
+  #   # mutate(weight = )
+  #   mutate(un_sub_region = ifelse(str_detect(un_sub_region,"Latin"),"Ltn. Ame. and\nthe Car.",
+  #                                 ifelse(str_detect(un_sub_region,"Australia"),"Aus. and New Z.",
+  #                                        ifelse(str_detect(un_sub_region,"Sub-Saharan"),"Sub-Saharan\nAfrica",
+  #                                               paste(un_sub_region)))
+  #   )#,
+  #   # For number labels
+  #   # un_sub_region = paste(un_sub_region," (n = ",n_eezs,")",sep="")
+  #   )
+  
+  
+  
+  # Non-weighted verion
+
+  boxplot_data <- Eme_Res %>%
+    # Get the order of boxes
+    filter(tresh == tresh_list[i],
+           !is.na(un_sub_region)) %>%
+    group_by(un_sub_region) %>%
+    summarise(order = median(emerging_yr),
+              n_eezs = length(unique(sf_eez_name))) %>%
+    # Get the rest of the data
+    left_join(Eme_Res) %>%
+    filter(tresh == tresh_list[i],
+           !is.na(un_sub_region)) %>%
+    mutate(un_sub_region = ifelse(str_detect(un_sub_region,"Latin"),"Ltn. Ame. and\nthe Car.",
+                                  ifelse(str_detect(un_sub_region,"Australia"),"Aus. and New Z.",
+                                         ifelse(str_detect(un_sub_region,"Sub-Saharan"),"Sub-Saharan\nAfrica",
+                                                paste(un_sub_region)))
+    ),
+    # For number labels
+    un_sub_region = paste(un_sub_region," (n = ",n_eezs,")",sep="")
+    )
+  
+  
+  boxplot_data$un_sub_region <- boxplot_data$un_sub_region %>% 
+    gsub("Northern","N.",.) %>% 
+    gsub("Southern","S.",.) %>% 
+    gsub("Western","W.",.) %>% 
+    gsub("Eastern","E.",.) %>% 
+    gsub("South-eastern","S.E.",.)
+  
+  # ---------- #
+  # Summary data
+  # ---------- #
+  
+  medians_data <- boxplot_data %>% 
+    group_by(un_sub_region,un_geo_region) %>% 
+    summarise(mean = mean(emerging_yr,na.rm = T),
+              sd = sd(emerging_yr,na.rm = T),
+              min = min(emerging_yr,na.rm = T),
+              max = max(emerging_yr,na.rm = T),
+              med = median(emerging_yr,na.rm = T),
+              n_stocks = n()
+    )
+  
+  boxplot_data <- boxplot_data %>% 
+    left_join(medians_data,
+              by = c("un_sub_region","un_geo_region")
+              )
+
+
+  boxplot <- ggplot(boxplot_data) +
+    geom_violin(
+      aes(
+        x = reorder(un_sub_region,order),
+        y = emerging_yr
+      ),
+      fill = "grey"
+    ) + 
+    facet_wrap(~un_geo_region,
+               scales = "free_x",
+               nrow = 1) +
+    # Median points
+    geom_point(
+      aes(
+        x = reorder(un_sub_region,order),
+        y = mean,
+        colour = mean
+      ),
+      size = 5
+    ) + 
+    # h line
+    geom_hline(yintercept = 2030, color = "grey", size = 0.5, linetype="dashed") +
+    scale_colour_viridis("",
+                       limits = c(2000,2100),
+                       breaks = seq(2000,2100,25),
+                       labels = c("","","","",""),
+                       direction = -1
+    ) +
+    xlab("") +
+    ylab("Year of range shift") +
+    scale_y_continuous(
+                   labels = c(2000,2025, 2050, 2075, ">2100"), # not inluding the > because we dont know
+    ) +
+    my_ggtheme_p() +
+    theme(
+      axis.text.x = element_text(size = 16, angle = 45, face = "plain", hjust = 1), 
+      strip.text.x = element_text(size = 18, colour = "black"), 
+      axis.title.y = element_text(size = 18),
+      axis.text.y = element_text(size = 16), 
+      # axis.ticks.x = element_blank(),
+      legend.position = ""
+    );boxplot
+  
+  ## --------------- ##
+  # Combine plots and save them
+  ## --------------- ##
+  
+  p <- ggdraw() +
+    # ToE Latitudinal plot
+    # draw_plot(Eez_hist, x = 0.873, y = 0.53, width = 0.124, height = 0.37) +
+    # Time of Emergence Map
+    draw_plot(map, x = 0, y = 0.4, width = 1, height = 0.6) +
+    # Regional boxplot
+    draw_plot(boxplot, x = 0, y = -0.03, width = 1, height = 0.44) +
+    # Labels
+    draw_plot_label(label = c("A", "B"), 
+                    size = 20,
+                    x = c(0, 0), 
+                    y = c(0.95, 0.46)
+    )
+  
+  
+  save_plot(
+    name_save,
+    p,
+    base_height = 11,
+    base_width = 12
+  )
+  
+}
+
+
+```
+
+
+
+##### New Fig. 4. Top shifting stocks/EEZs weighted (proportion)
+
+```{r, top_stocks_eez, eval = F, echo = F}
+
+Value_map_data %>% 
+  group_by(variable,tresh) %>% 
+  top_frac(0.10,participation) %>% 
+  filter(tresh == "tresh_two",
+         variable == "value") %>% 
+  # View()
+  left_join(Sau_data) %>% 
+  group_by(variable,tresh) %>% 
+  top_frac(0.10,value) %>%
+  left_join(my_path("G","SAU","exploited_species_list.csv",read = T)) %>% 
+  ggplot() +
+  geom_bar(
+    aes(
+      x = common_name,
+      y = value
+    ),
+    stat = "identity"
+  ) +
+  facet_wrap(~sau_fishing_entity,
+             scale = "free") +
+  theme(axis.text.x = element_text(angle = 90))
+
+
+```
+
+
+
 ##### Fig. 4. Bubble plot
 
 ```{r, buble_plot, eval = F, echo = F}
