--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -2816,42 +2816,23 @@ ggsave(
 # Create data
 Top_map_data <- top_toe %>% 
   filter(tresh == selected_tresh,
-         variable == "value") %>% 
-  mutate(mean = mean-2000) %>%
-  arrange(mean)
+         variable == "value") # tried with catch but is quite the same
 
 
+World_map_top <- World_map %>%
+  full_join(Top_map_data,
+            by = c("sau_fishing_entity")
+  ) %>% 
+  filter(!is.na(variable))
+  
 
 # These are regions without transboundary species
 grey_land <- World_map %>% 
-  filter(!fishing_entity_id %in% Value_map_data$fishing_entity_id) %>% 
+  filter(!sau_fishing_entity %in% Top_map_data$sau_fishing_entity) %>% 
   filter(!sovereignt %in% c("Antarctica"))
 
-# grey_eez <- World_eez_sf %>% 
-#   filter(!eezid %in% Eez_d_hist$eezid,
-#          !eez_name %in% Neighbours$eez_name)
 
-# -------------------------- #
-# Call plot for both tresholds
-# -------------------------- #
-# tresh_list <- c("tresh_one","tresh_two")
-
-
-  # Value Map
-  World_map_part <- World_map_nemer %>% 
-  filter(
-    tresh ==  ,
-    variable == "value"
-  )
-  
-  # ToE Map 
-  toe_map_data <- World_eez_sf %>% 
-    left_join(Eez_d_hist,
-              by = "eezid") %>% 
-    filter(tresh == tresh_list[i],
-           metric == "mean_yr")
-  
-  # Map with countries without ToE
+# Map with countries without ToE
   
   russia_churchil <- World_eez_sf %>% 
     filter(eez_name %in% c("Russia (Kara Sea)","Russia (Laptev to Chukchi Sea)"))
@@ -2866,249 +2847,42 @@ grey_land <- World_map %>%
            !name %in% World_map_part$name) # Filter EEZs with ToE stocks
     
     
-  map <- ggplot(toe_map_data) +
+  map <- ggplot(World_map_top) +
     geom_sf(
       aes(
-        fill = reverse #original map
+        fill = mean #original map
         # fill = value
       ),
       color =  "white",
       size = 0.1
     ) +
-    # Inlcude the participation of species
-    geom_sf(data = World_map_part,
-            # aes(fill = participation+2000), #original map
-            aes(fill = participation),
-            color =  "white",
-            size = 0.1
-    ) +
     # grey maps
     # ggplot() +
     geom_sf(data = grey_land, aes(), fill = "grey50", color =  "white",size = 0.1) +
-    # geom_sf(data = grey_eez, aes(), fill = "white", color =  "grey50",size = 0.1) +
-    geom_sf(data = no_toe_eez, aes(), fill = "lightblue", color =  "white",size = 0.1) +
+    # geom_sf(data = no_toe_eez, aes(), fill = "lightblue", color =  "white",size = 0.1) +
     geom_sf(data = no_toe_land, aes(), fill = "lightblue", color =  "white",size = 0.1) +
     # Set Participation labels
-    annotate("text",
-             x =-150,
-             y = -69,
-             label = "Transboundary fishing revenue (%)",
-             color="black",
-             size=5,
-             angle=0,
-             fontface="bold",
-             hjust=0) +
-    annotate("text", 
-             x = c(-72,-35,5,46,82),
-             y = -69,
-             # x =(c(-8500000,-3000000,2500000,7500000,12800000)),
-             # y = -9050000,
-             label = c(0,25,50,75,100), 
-             color="black", 
-             size=4, 
-             angle=0, 
-             # fontface="bold",
-             hjust=0) +
-    # Set ToE labels
-    annotate("text", 
-             x =-150,
-             y = -85,
-             label = "Average year of range shift",
-             color="black", 
-             size=5, 
-             angle=0, 
-             fontface="bold",
-             hjust=0) +
-    annotate("text", 
-             x = c(-79,-39,2,42,81),
-             y = -85,
-             # label = seq(2100,2000,-25), # original
-             label = c(">2100",seq(2075,2000,-25)), # not inluding the > because we dont know
-             color="black", 
-             size=4, 
-             angle=0, 
-             # fontface="bold",
-             hjust=0) +
-    # Set No emergence label
-    annotate("text",
-             x =110,
-             y = -77,
-             label = "No shift",
-             color="black",
-             size=5,
-             angle=0,
-             fontface="bold",
-             hjust=0) +
-    scale_fill_viridis("",
+    scale_fill_viridis("Average year of range shift",
                        limits = c(2000,2100),
                        breaks = seq(2000,2100,25),
-                       labels = c("","","","","")#,
-                       # direction = -1
-    ) +
-    # scale_fill_gradientn("",
-    #                      limits = c(2000,2100),
-    #                      breaks = seq(2000,2100,25),
-    #                       labels = c("","","","",""),
-    #                      colours = pal
-    # ) +
-    # geom_hline(yintercept = c(-50,0,50,80)) +
-    my_ggtheme_m(leg_pos = "bottom") +
-    theme(
-      legend.box.margin = margin(t = -62, l = 252),
-      legend.text = element_blank(),
-      legend.key.width = unit(5, "line")
-    )
-  
-  
-  
-  ## --------------- ##
-  # Regional Boxplot
-  ## --------------- ##
-  
-  # Weighted verion
-  # boxplot_data <- Eme_Res %>% 
-  #   # Get the order of boxes
-  #   filter(tresh == tresh_list[i],
-  #          !is.na(un_sub_region)) %>%
-  #   group_by(un_sub_region) %>%
-  #   summarise(n_eezs = length(unique(sf_eez_name))) %>%
-  #   # Get the rest of the data
-  #   left_join(Eme_Res) %>%
-  #   filter(tresh == tresh_list[i],
-  #          !is.na(un_sub_region)) %>%
-  #   # mutate(weight = )
-  #   mutate(un_sub_region = ifelse(str_detect(un_sub_region,"Latin"),"Ltn. Ame. and\nthe Car.",
-  #                                 ifelse(str_detect(un_sub_region,"Australia"),"Aus. and New Z.",
-  #                                        ifelse(str_detect(un_sub_region,"Sub-Saharan"),"Sub-Saharan\nAfrica",
-  #                                               paste(un_sub_region)))
-  #   )#,
-  #   # For number labels
-  #   # un_sub_region = paste(un_sub_region," (n = ",n_eezs,")",sep="")
-  #   )
-  
-  
-  
-  # Non-weighted verion
-
-  boxplot_data <- Eme_Res %>%
-    # Get the order of boxes
-    filter(tresh == tresh_list[i],
-           !is.na(un_sub_region)) %>%
-    group_by(un_sub_region) %>%
-    summarise(order = median(emerging_yr),
-              n_eezs = length(unique(sf_eez_name))) %>%
-    # Get the rest of the data
-    left_join(Eme_Res) %>%
-    filter(tresh == tresh_list[i],
-           !is.na(un_sub_region)) %>%
-    mutate(un_sub_region = ifelse(str_detect(un_sub_region,"Latin"),"Ltn. Ame. and\nthe Car.",
-                                  ifelse(str_detect(un_sub_region,"Australia"),"Aus. and New Z.",
-                                         ifelse(str_detect(un_sub_region,"Sub-Saharan"),"Sub-Saharan\nAfrica",
-                                                paste(un_sub_region)))
-    ),
-    # For number labels
-    un_sub_region = paste(un_sub_region," (n = ",n_eezs,")",sep="")
-    )
-  
-  
-  boxplot_data$un_sub_region <- boxplot_data$un_sub_region %>% 
-    gsub("Northern","N.",.) %>% 
-    gsub("Southern","S.",.) %>% 
-    gsub("Western","W.",.) %>% 
-    gsub("Eastern","E.",.) %>% 
-    gsub("South-eastern","S.E.",.)
-  
-  # ---------- #
-  # Summary data
-  # ---------- #
-  
-  medians_data <- boxplot_data %>% 
-    group_by(un_sub_region,un_geo_region) %>% 
-    summarise(mean = mean(emerging_yr,na.rm = T),
-              sd = sd(emerging_yr,na.rm = T),
-              min = min(emerging_yr,na.rm = T),
-              max = max(emerging_yr,na.rm = T),
-              med = median(emerging_yr,na.rm = T),
-              n_stocks = n()
-    )
-  
-  boxplot_data <- boxplot_data %>% 
-    left_join(medians_data,
-              by = c("un_sub_region","un_geo_region")
-              )
-
-
-  boxplot <- ggplot(boxplot_data) +
-    geom_violin(
-      aes(
-        x = reorder(un_sub_region,order),
-        y = emerging_yr
-      ),
-      fill = "grey"
-    ) + 
-    facet_wrap(~un_geo_region,
-               scales = "free_x",
-               nrow = 1) +
-    # Median points
-    geom_point(
-      aes(
-        x = reorder(un_sub_region,order),
-        y = mean,
-        colour = mean
-      ),
-      size = 5
-    ) + 
-    # h line
-    geom_hline(yintercept = 2030, color = "grey", size = 0.5, linetype="dashed") +
-    scale_colour_viridis("",
-                       limits = c(2000,2100),
-                       breaks = seq(2000,2100,25),
-                       labels = c("","","","",""),
                        direction = -1
     ) +
-    xlab("") +
-    ylab("Year of range shift") +
-    scale_y_continuous(
-                   labels = c(2000,2025, 2050, 2075, ">2100"), # not inluding the > because we dont know
-    ) +
-    my_ggtheme_p() +
-    theme(
-      axis.text.x = element_text(size = 16, angle = 45, face = "plain", hjust = 1), 
-      strip.text.x = element_text(size = 18, colour = "black"), 
-      axis.title.y = element_text(size = 18),
-      axis.text.y = element_text(size = 16), 
-      # axis.ticks.x = element_blank(),
-      legend.position = ""
-    );boxplot
-  
-  ## --------------- ##
-  # Combine plots and save them
-  ## --------------- ##
-  
-  p <- ggdraw() +
-    # ToE Latitudinal plot
-    # draw_plot(Eez_hist, x = 0.873, y = 0.53, width = 0.124, height = 0.37) +
-    # Time of Emergence Map
-    draw_plot(map, x = 0, y = 0.4, width = 1, height = 0.6) +
-    # Regional boxplot
-    draw_plot(boxplot, x = 0, y = -0.03, width = 1, height = 0.44) +
-    # Labels
-    draw_plot_label(label = c("A", "B"), 
-                    size = 20,
-                    x = c(0, 0), 
-                    y = c(0.95, 0.46)
-    )
-  
-  
-  save_plot(
-    name_save,
-    p,
-    base_height = 11,
-    base_width = 12
+    my_ggtheme_m(leg_pos = "bottom") +
+    theme(legend.key.width = unit(5, "line")) +
+    
+    guides(
+      fill=guide_colorbar(title.position="top", 
+                        title.hjust =0.5)
   )
   
-}
-
+  ggsave(
+    plot = map,
+    "./Figures/top_toe_map.png",
+    width = 10,
+    height = 5,
+    units = "in"
+  )
+  
 
 ```
 
