--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -274,8 +274,6 @@ grid.raster(img)
 
 The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and EEZs' geographic regions (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions, like northern Europe and eastern Asia, are projected to experience much later range shifts. Stocks in a number of EEZs including Brazil and New Zealand’s EEZs are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
 
-
-
 <!-- ![toeFigure 2. Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts per EEZ. EEZs with no time of emergence between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand](../Figures/Fig3.png) -->
 
 ```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colors are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colors represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year for all shifting stocks in the region. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
@@ -286,7 +284,15 @@ grid.raster(img)
 ```
 
 
-We estimated the participation of the transboundary stocks that are shifting between neighboring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+We estimated the participation of the transboundary stocks that are shifting between neighboring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru). 
+
+**Having high-valuable stocks shifting sooner could be a much bigger concern than having many low-value stocks shifting. On average, countries will see a range shift of the top 5 most valuable stocks by 2038 $\pm$ 16 years (Figure S-NEW). Moreover, our projections suggest that these high value stocks are already shifting in 66% of coastal nations, with the regions of Polynesia (n = 22), Sub-Saharan Africa (n = 36) and Latin America and the Caribbean (n = 62) presenting the larger number of shifting stocks.** 
+
+
+
+(**New Figuree**). 
+
+
 
 We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs for both thresholds (one and two s.d.). Within five years of the UN 2030 Agenda timeline, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs considering a two s.d. threshold (Fig. \@ref(fig:toeFigure3); above Fisheries >75th percentile). In this case, 321 stocks shifting in just eleven countries account for 4.2 billion USD (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)). The values are substantially higher when considering a more relaxed threshold. In this case, 2,136 stocks accounting for USD 24 billion in fishing revenue are projected to shift within five years of the UN 2030 Agenda timeline in 134 EEZs.
 
